# FAST

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
FASTphysics/: exe.py  server.py
FASTphysics/admin/: exe.py  firestore.py  server.py
FASTphysics/admin/.streamlit/: config.toml
FASTphysics/interface/: interface.py
FASTphysics/tutor/: prompts.py  tutor.py
FASTphysics/utils/: info.py  json-to-toml.py
